force-app/main/default/objects/Vehical__c/Vehical__c.object-meta.xml
<CustomObject>
    <label>Vehical</label>
    <nameField>
        <displayFormat>Veh-{000}</displayFormat>
        <label>Vehical Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehical</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>