force-app/main/default/objects/Vehical__c/fields/MemberShip__c.field-meta.xml
<CustomField>
    <fullName>MemberShip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MemberShip</label>
    <type>Checkbox</type>
</CustomField>