force-app/main/default/objects/Vehical__c/fields/Vehical_Owner__c.field-meta.xml
<CustomField>
    <fullName>Vehical_Owner__c</fullName>
    <label>Vehical Owner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>