force-app/main/default/objects/Vehical__c/fields/VehicalNo__c.field-meta.xml
<CustomField>
    <fullName>VehicalNo__c</fullName>
    <label>VehicalNo</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>