force-app/main/default/objects/Vehical__c/fields/VehicalType__c.field-meta.xml
<CustomField>
    <fullName>VehicalType__c</fullName>
    <label>VehicalType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Govt.</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>